# game_input_helper

./: README.md  package.json  pnpm-lock.yaml
.claude/: settings.local.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: game_detector.rs  handle.rs  hotkey.rs  input.rs  lib.rs  main.rs
