[package]
name = "alt_input_helper"
version = "0.2.0"
description = "Game input helper"
authors = ["Eigeen <dengyk2002@qq.com>"]
edition = "2024"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "alt_input_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
incremental = true

[profile.release]
strip = true
# codegen-units = 1
# lto = true
# panic = "abort"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"

# 模拟输入
enigo = "0.6"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11"
log = { version = "0.4", features = ["std"] }
eyre = "0.6"
parking_lot = "0.12"
tokio = { version = "1.47", features = ["parking_lot", "rt-multi-thread", "time"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse"] }
